--- a/src/view/select.html
+++ b/src/view/select.html
@@ -7,7 +7,7 @@
         <select name="{$name}" lay-filter="{$name}" lay-verify="{$layVerify}" lay-verType="tips" data-name="name_{$build_view_rand}" lay-reqText="{:lang('build_view_please_select')}{$label}" lay-search {$required} {if isset($multiple)}xm-select="{$name}" xm-select-search{/if}>
         <option value="">{:lang('build_view_please_select')}{$label}</option>
         <!--{foreach $options as $key=>$val}-->
-            <option value="{$key}" {eq name="$value" value="$key"}selected{/eq}>{$val}</option>
+            <option value="{$key}" {notempty name="$value"}{eq name="$value" value="$key"}selected{/eq}{/notempty}>{$val}</option>
             <!--{/foreach}-->
         </select>
         <!--{notempty name="$help"}-->
