--- a/src/view/filter.html
+++ b/src/view/filter.html
@@ -19,13 +19,22 @@
         border-color: initial;
         border-image: initial;
     }
-    .layui-form-pane .layui-form-text .layui-form-label  {
+    .layui-form-pane .layui-form-item .layui-form-label  {
         float:left;
         clear: none;
+
+    }
+    .layui-form-item .layui-inline{
+        margin-bottom:0px;
     }
     .layui-form-pane .layui-form-text .layui-input-inline{
         top:0;
         clear: none;
+
+    }
+
+    .layui-form-item .layui-form-checkbox {
+         margin-top: 1px;
     }
 </style>
 <fieldset class="layui-elem-field" >
