--- a/src/view/select.html
+++ b/src/view/select.html
@@ -1,13 +1,13 @@
 {if isset($multiple)}
 <link href="/vendor/build-view/plugs/formSelect/formSelects-v4.css" rel="stylesheet">
 {/if}
-<div class="layui-form-item layui-form-text">
+<div class="layui-form-item">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         <select name="{$name}" lay-filter="{$name}" lay-verify="{$layVerify}" lay-verType="tips" data-name="name_{$build_view_rand}" lay-reqText="{:lang('build_view_please_select')}{$label}" lay-search {$required} {if isset($multiple)}xm-select="{$name}" xm-select-search{/if}>
         <option value="">{:lang('build_view_please_select')}{$label}</option>
         <!--{foreach $options as $key=>$val}-->
-            <option value="{$key}" {notempty name="$value"}{eq name="$value" value="$key"}selected{/eq}{/notempty}>{$val}</option>
+        <option value="{$key}" {if !empty($value) || $value =='0'}{eq name="$value" value="$key"}selected{/eq}{/if}>{$val}</option>
             <!--{/foreach}-->
         </select>
         <!--{notempty name="$help"}-->
@@ -17,7 +17,8 @@
 </div>
 
 <script type="text/javascript">
-    let i = Math.ceil(Math.random()*10000000)
+
+    let i = Math.ceil(Math.random()*10000000);
     $('[data-name=name_{$build_view_rand}]').attr('lay-filter','build_id_'+i);
     $('[data-name=name_{$build_view_rand}]').attr('xm-select','build_id_'+i);
     /*{if isset($event)}*/
