--- a/src/view/button.html
+++ b/src/view/button.html
@@ -1,1 +1,1 @@
-<button class="layui-btn {$size|raw} {$color|raw} {$radius|raw}" {$id|raw} {$value|raw} {$tager|raw} type="button" data-title="{$label}">{$icon|raw}{$label}</button>
+<button class="layui-btn {$size|raw} {$color|raw} {$radius|raw}" data-confirm="{$confirm}" {$id|raw} {$value|raw} {$tager|raw} type="button" data-title="{$label}">{$icon|raw}{$label}</button>
