--- a/src/view/echarts.html
+++ b/src/view/echarts.html
@@ -35,12 +35,11 @@
         padding-top: 10px;color: #000000;font-size: 16px
     }
 </style>
-
 <div class="layui-row">
     {foreach $headerAnalyze as $val}
-    <div class="layui-col-md{$md}">
-        <div class="layui-card-body">
-            <div class="layui-card layui-card-body">
+    <div class="layui-col-md{$md} ">
+        <div class="layui-card-body ">
+            <div class="layui-card ">
                 <div class="layui-card-header">
                     {$val.text}
                     <span class="layui-badge layui-bg-blue layuiadmin-badge">{:lang('build_view_echart_day')}</span>
@@ -51,20 +50,17 @@
                         {:lang('build_view_echart_total')}{$val.text} <span class="layui-text">{$val.count}</span>
                         <span class="layuiadmin-span-color"><i class="fa fa-bar-chart" style="font-size: 30px; color: green;cursor: pointer" data-open="{:request()->baseUrl()}?{:request()->query()}&chartTable={$val.table}"></i></span>
                     </p>
-
                 </div>
             </div>
         </div>
     </div>
     {/foreach}
-    <div id="totalArr" class="layui-col-space15 layui-row">
+    <div id="totalArr" class="layui-row">
     </div>
-
     <div class="layui-card-body layui-anim layui-anim-upbit">
         <div class="layui-card-body layui-card think-box-shadow">
             <div class="layui-card-body">
                 {$filter|raw}
-
                 <div class="layui-form-item layui-inline" id="dateButtonDiv">
                     <button type="button" class="layui-btn layui-btn-sm layui-btn-checked" id="today">{:lang('build_view_echart_today')}</button>
                     <button type="button" class="layui-btn layui-btn-sm layui-btn-primary" id="week">{:lang('build_view_echart_week')}</button>
@@ -79,10 +75,6 @@
                                class="layui-input">
                     </div>
                 </div>
-
-
-
-
             </div>
             <div id="container" style="width:100%;height:390px;display: inline-flex;"></div>
         </div>
@@ -225,7 +217,7 @@
                     }
                     $('#totalArr').append('<div class="layui-col-md'+md+'">\n' +
                         '                    <div class="layui-card-body">\n' +
-                        '                        <div class="layui-card layui-card-body">\n' +
+                        '                        <div class="layui-card">\n' +
                         '                            <div class="layui-card-header">\n' +
                         '                                '+item.text+'\n' +
                         '                                <span class="layui-badge layui-bg-blue layuiadmin-badge">'+item.date_text+'</span>\n' +
