--- a/src/view/iframe.html
+++ b/src/view/iframe.html
@@ -1,9 +1,24 @@
-<link rel="stylesheet" href="/vendor/build-view/plugs/layui/css/layui.css">
-<link rel="stylesheet" href="/vendor/build-view/theme/css/console.css?at={:date('md')}">
-<script src="/vendor/build-view/plugs/layui/layui.all.js"></script>
-<script src="/vendor/build-view/plugs/require/require.js"></script>
-<script src="/vendor/build-view/admin.js"></script>
+<!DOCTYPE html>
+<html lang="zh">
 
+<head>
+    <title>{block name="title"}{$title|default=''}{if !empty($title)} · {/if}{:sysconf('site_name')}{/block}</title>
+    <meta charset="utf-8">
+    <meta name="renderer" content="webkit">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=0.4">
+    <link rel="stylesheet" href="/vendor/build-view/plugs/layui/css/layui.css">
+    <link rel="stylesheet" href="/vendor/build-view/theme/css/console.css?at={:date('md')}">
+    <script src="/vendor/build-view/plugs/layui/layui.all.js"></script>
+    <script src="/vendor/build-view/plugs/require/require.js"></script>
+    <script src="/vendor/build-view/admin.js"></script>
+
+</head>
+
+<body >
 <!--{block name="header"}-->
 <!--{notempty name='title'}-->
 <!--{eq name="Think.get.open_type" value="open"}-->
@@ -75,4 +90,6 @@
 </div>
 
 <!--{/block}-->
+</body>
+</html>
 
