--- a/src/view/selectUpdate.html
+++ b/src/view/selectUpdate.html
@@ -3,7 +3,7 @@
     <select name="{$domId}" lay-filter="{$domId}" lay-search  {if isset($multiple)}xm-select="{$domId}" xm-select-skin="normal" xm-select-direction="up" xm-select-search{/if}>
     <option value="">{:lang('build_view_please_select')}{$label}</option>
     {foreach $options as $key=>$val}
-    <option value="{$key}" {notempty name="$value"}{eq name="$value" value="$key"}selected{/eq}{/notempty}>{$val}</option>
+    <option value="{$key}" {if !empty($value) || $value =='0'}{eq name="$value" value="$key"}selected{/eq}{/if}>{$val}</option>
     {/foreach}
     </select>
 </div>
